<resources>
    <string name="app_name">CookPhone</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_ingredient">Ingredients</string>
    <string name="title_explore">Explore</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe_content">recipe_content</string>
    <string name="tab_text_1">Steps</string>
    <string name="tab_text_2">Ingredients</string>
    <string name="tab_text_3">Nutritional Values</string>
    <string name="tab_text_4">Recommended Recipes</string>
</resources>
